--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <meta name="robots" content="noindex, nofollow" />
+    <title>Simple Frequently Asked Questions</title>
+    <meta
+      name="description"
+      content="devChallenges.io - Simple Frequently Asked Questions | by h-yoshikawa44"
+    />
+    <link rel="icon" type="image/vnd.microsoft.icon" href="/favicon.ico" />
   </head>
   <body>
     <div id="app">
       <h1>Vite App</h1>
     </div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/js/main.js"></script>
   </body>
 </html>
