feat: 640pxベースでざっと組んだ(#3)

--- a/index.html
+++ b/index.html
@@ -21,9 +21,60 @@
     />
   </head>
   <body>
-    <div id="app">
-      <h1>Vite App</h1>
-    </div>
+    <header class="header">
+      <h1 class="header__title">Frequently Asked Questions</h1>
+      <p class="header__text">
+        Browse through the most frequently asked questions
+      </p>
+    </header>
+    <main class="main">
+      <div class="container">
+        <section class="qa-section">
+          <h2 class="qa-section__header">How can I track my order?</h2>
+          <p>You can track your order using the following steps</p>
+          <ul class="qa-section__list qa-section__num-list">
+            <li>
+              Go to the Order
+              <a class="qa-section__link" href="#">Tracking page</a>.
+            </li>
+            <li>Enter your order number and email address.</li>
+            <li>
+              Click on the Track Order button to view the current status of your
+              shipment.
+            </li>
+          </ul>
+          <p>
+            If you encounter any issues, please visit our
+            <a class="qa-section__link" href="#">Help Center</a>.
+          </p>
+        </section>
+        <section class="qa-section">
+          <h2 class="qa-section__header">What is your return policy?</h2>
+          <p>
+            We offer a 30-day return policy on most items. Here are some key
+            points
+          </p>
+          <ul class="qa-section__list">
+            <li>
+              <em>Items must be in original condition</em>: Unworn, unused, and
+              unwashed.
+            </li>
+            <li>
+              <em>Include original packaging and tags</em>: All items should be
+              returned with their original packaging and tags.
+            </li>
+            <li>
+              <em>Proof of purchase</em>: A receipt or proof of purchase is
+              required.
+            </li>
+          </ul>
+          <p>
+            For more detailed information, read our full
+            <a class="qa-section__link" href="#">Return Policy.</a>
+          </p>
+        </section>
+      </div>
+    </main>
     <script type="module" src="/js/main.js"></script>
   </body>
 </html>
